--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/Yalier/Yalier.github.io.git" # you code repository
 
 # Sidebar settings
-sidebar: true                           # whether or not using Sidebar.
+sidebar: false                           # whether or not using Sidebar.
 sidebar-about-description: ""
 sidebar-avatar: img/avatar-m.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
@@ -21,7 +21,7 @@ RSS: false
 # weibo_username:   ""  
 zhihu_username:     "fiser km"
 github_username:    Yalier
-facebook_username:  ""
+#facebook_username:  ""
 jianshu_username:   "没啥毛病嘿嘿"
 #twitter_username:   qiubaiying
 
