--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: My Blog
 SEOTitle: 李平的博客 | My Blog
 header-img: img/post-bg-desk.jpg
 email: 18217546748@163.com
-description: ""
+description: "-"
 keyword: "My Blog, 李平的博客, iOS, Apple, iPhone"
 url: "http://Yalier.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
@@ -11,7 +11,7 @@ github_repo: "https://github.com/Yalier/Yalier.github.io.git" # you code reposit
 
 # Sidebar settings
 sidebar: false                           # whether or not using Sidebar.
-sidebar-about-description: ""
+sidebar-about-description: "-"
 sidebar-avatar: img/avatar-m.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
