--- a/_config.yml
+++ b/_config.yml
@@ -19,10 +19,10 @@ sidebar-avatar: img/avatar-m.jpg      # use absolute URL, seeing it's used in bo
 # SNS settings
 RSS: false
 # weibo_username:   ""  
-zhihu_username:     "fiser km"
+zhihu_username:     fiser km
 github_username:    Yalier
 #facebook_username:  ""
-jianshu_username:   "没啥毛病嘿嘿"
+jianshu_username:   没啥毛病嘿嘿
 #twitter_username:   qiubaiying
 
 
@@ -56,7 +56,7 @@ kramdown:
 
 # 评论系统
 # Disqus settings（https://disqus.com/）
-disqus_username: ""
+disqus_username: 
 
 # 多说 将于2017年6月1日正式关停服务，建议使用 Disqus（http://dev.duoshuo.com/threads/58d1169ae293b89a20c57241）
 # Duoshuo settings
