--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/post-bg-desk.jpg
 email: 18217546748@163.com
 description: "-"
 keyword: "My Blog, 李平的博客, iOS, Apple, iPhone"
-url: "http://Yalier.github.io"          # your host, for absolute URL
+url: "https://Yalier.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/Yalier/Yalier.github.io.git" # you code repository
 
@@ -94,16 +94,7 @@ service-worker: true
 # Friends
 friends: [
     {
-        #title: "WY",
-        #href: "http://zhengwuyang.com"
-    },{
-        #title: "简书·BY",
-        #href: "http://www.jianshu.com/u/e71990ada2fd"
-    },{
-        #title: "Apple",
-        #href: "https://apple.com"
-    },{
-        #title: "Apple Developer",
-        #href: "https://developer.apple.com/"
+        title: "简书",
+        href: "http://www.jianshu.com/users/007d742bdae2/timeline"
     }
 ]
