--- a/_config.yml
+++ b/_config.yml
@@ -19,10 +19,10 @@ sidebar-avatar: img/avatar-m.jpg      # use absolute URL, seeing it's used in bo
 # SNS settings
 RSS: false
 # weibo_username:   ""  
-zhihu_username:     fiser km
+#zhihu_username:     fiser km
 github_username:    Yalier
 #facebook_username:  ""
-jianshu_username:   没啥毛病嘿嘿
+#jianshu_username:   没啥毛病嘿嘿
 #twitter_username:   qiubaiying
 
 
